--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,10 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.zeros(10)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.zeros(1000)\n",
+    "\n",
+    "answer(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,10 +162,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.zeros((10,10))\n",
+      "print(\"%d bytes\" % (Z.size * Z.itemsize))\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.itemsize * x.size\n",
+    "\n",
+    "answer(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,10 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%run `python -c \"import numpy; numpy.info(numpy.add)\"`\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.add?\n",
+    "\n",
+    "answer(5)"
+   ]
   },
   {
    "cell_type": "markdown",
