--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -215,16 +215,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      "Z = np.zeros(10)\n",
+      "Z[4] = 1\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.zeros(10)\n",
+    "x[4] = 1\n",
+    "print(x)\n",
+    "\n",
+    "answer(6)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 7. Create a vector with values ranging from 10 to 49 (★☆☆)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33\n",
+      " 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.linspace(10, 49)\n",
+    "x = np.arange(10, 49)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.arange(10,50)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arange?"
    ]
   },
   {
@@ -243,10 +307,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.arange(0, 102, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.flip(x)\n",
+    "x = x[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.arange(50)\n",
+      "Z = Z[::-1]\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,10 +352,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "Z = np.arange(9).reshape(3, 3)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(0, 9).reshape(3, 3)\n",
+    "print(x)\n",
+    "\n",
+    "answer(9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,10 +383,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 4]),)\n",
+      "(array([0, 1, 4]),)\n",
+      "nz = np.nonzero([1,2,0,0,4,0])\n",
+      "print(nz)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1,2,0,0,4,0])\n",
+    "\n",
+    "non_z_indices_a = np.where(x != 0)\n",
+    "non_z_indices_b = np.nonzero(x)\n",
+    "\n",
+    "print(non_z_indices_a)\n",
+    "print(non_z_indices_b)\n",
+    "\n",
+    "answer(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,10 +418,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.eye(3)\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.eye(3)\n",
+    "answer(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.array?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,10 +453,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.random.random((3,3,3))\n",
+      "print(Z)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.rand(3,3,3)\n",
+    "answer(12)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,10 +479,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.random.random((10,10))\n",
+      "Zmin, Zmax = Z.min(), Z.max()\n",
+      "print(Zmin, Zmax)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.rand(10, 10)\n",
+    "x_min, x_max = x.min(), x.max()\n",
+    "answer(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0016148746986738294\n",
+      "0.9901744156569464\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_min)\n",
+    "print(x_max)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,10 +526,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.49700608760333853\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.rand(30)\n",
+    "x_mean = np.mean(x)\n",
+    "print(x_mean)"
+   ]
   },
   {
    "cell_type": "markdown",
